2010-04-21  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix project name in documentation footer.
	* template-project/doc/footer.html: Here.

2010-04-12  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix generation when project name contains hyphens.
	Patch proposed by Duong Dang.

	* .gitignore: Ignore packageDep.
	* ChangeLog: Remove whitespace.
	* packageCreate.in: Fix project name.

2009-12-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Distribute build-aux/bootstrap.
	* template-project/Makefile.am: Here.

2009-10-25  Florent Lamiraux  <florent@laas.fr>

	Fix typo in tests/Makefile.am.
	* template-project/tests/Makefile.am: Replace wrong
	simple_test_la_CPPFLAGS by simple_test_CPPFLAGS.

2009-05-27  Florent Lamiraux  <florent@laas.fr>

	Regenereate .pc file if Makefile has changed.

	This ensures that the .pc file is regenerated if configure has been
	invoked.
	* template-project/Makefile.am:

2009-05-25  Florent Lamiraux  <florent@laas.fr>

	Removed trailing backslash in Makefile.
	* template-project/src/Makefile.am: here

2009-05-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Replace MKDIR_P by mkdir_p.
	MKDIR_P is not always defined, use mkdir_p instead.
	* template-project/Makefile.am: Here.

2009-05-08  Florent Lamiraux  <florent@laas.fr>

	Add linking flags in src/Makefile.am.
	* packageCreate:
	* template-project/src/Makefile.am:

2009-05-01  Florent Lamiraux  <florent@laas.fr>

	Enhance package construction.
	* template-project/configure.ac:
	Check that doxygen is installed,
	search for mkdir and sed
	* template-project/doc/Makefile.am: .
	replace MKDIR_P by mkdir_p for better portability

2009/04/23
	14. packageDep can display several packages in one output.

2009/04/22
	13. Add packageDep script to generate graphs of dependencies between packages.

	12. --version now outputs correct value.

PackageCreate version 1.1.0 released April 7, 2009

	11. Fixed dependency management.
	10. Reorganization of the script